# customized-tflite

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/common/: command_line_parser.h  id_generator.h  iterator_adaptor.h  logging.h  singleton.h  stl_wrapper.h  string_utils.h
include/ir_port/: graphviz_serializer.h  parser_utils.h  tflite_op_resolver.h  tflite_parser.h
include/model/: data_blob.h  graph.h  model.h  operator.h  options.h  types.h
include/parser_and_serializer/graphviz/: serializer.h
include/parser_and_serializer/tflite/: op_resolver.h  parser.h  serializer.h  utils.h
include/tools/graph_cutter/: cutting_utils.h
scripts/: apply_clang_format.sh  build-win.cmd  build.sh
source/: CMakeLists.txt  main.cpp
source/common/: CMakeLists.txt  command_line_parser.cpp  logging.cpp  string_utils.cpp
source/ir_port/: CMakeLists.txt  graphviz_serializer.cpp  parser_utils.cpp  tflite_op_resolver.cpp  tflite_parser.cpp
source/model/: CMakeLists.txt  data_blob.cpp  graph.cpp  operator.cpp  types.cpp
source/parser_and_serializer/: CMakeLists.txt
source/parser_and_serializer/graphviz/: serializer.cpp
source/parser_and_serializer/tflite/: op_resolver.cpp  parser.cpp  serializer.cpp  utils.cpp
source/tools/: CMakeLists.txt
source/tools/graph_cutter/: cutting_utils.cpp  graph_cutter.cpp
test/: test.cpp
tests/: CMakeLists.txt  command_line_parser_test.cpp  main.cpp  test.cpp
tests/common/: string_util_test.cpp
tools/: CMakeLists.txt  README.md
tools/graph_cutter/: cutting_utils.cpp  graph_cutter.cpp
